# atomlbot

./: .env.example  .gitignore  README.md  __init__.py  atombot.py  pyproject.toml
agents/: chat_agent.py  mcp_client.py
core/: atom.py  atomspace.py  value.py
docs/: hypergraphql.md
examples/: basic_example.py  hgnn_demo.py  hypergraphql_cli.py  hypergraphql_demo.py  standalone_hgnn_demo.py
hypergraph/: __init__.py  dynamical_system.py  hgnn.py  hyperagent.py  hyperchannel.py  hypergraph.py  hypergraphql.py
links/: evaluation_link.py  inheritance_link.py  list_link.py
nodes/: concept_node.py  predicate_node.py
tests/: test_atombot.py  test_hypergraphql.py
tests/test_hypergraph/: test_hgnn.py
